--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.0",
     "morgan": "~1.7.0",
     "request": "^2.78.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "urlencode": "^1.1.0"
   }
 }
